--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,5 @@
-!!! 5
-html
-head
-    link(rel='stylesheet', href='lib/bootstrap.min.css')
-    link(rel='stylesheet', href='lib/prettify.css')
-    link(rel='stylesheet', href='css/app.css')
-    title
-  body(onload='prettyPrint()')
+extends layout
+block body
     .topbar
       .fill
         .container
@@ -27,6 +21,11 @@ head
       section#intro
         .page-header
           h1 mywebclass – Content Editor.
+            div(ng-controller='AppCtrl')
+              .hero-unit  
+              div(ng-repeat='n in name')
+                h3 {{n.siteID}}
+              div(ng-view)
         .row
           .row
             .span7.offset1
@@ -47,20 +46,25 @@ head
         p.pull-right
           | mywebclass
           | &copy 2013
-
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js')
+    script(src='js/lib/angular/angular.js')
+    script(src='js/app.js')
+    script(src='js/services.js')
+    script(src='js/controllers.js')
+    script(src='js/filters.js')
+    script(src='js/directives.js')
+    script(src='js/lib/jquery/jquery-1.9.1.min.js')
+    script(src='bootstrap/js/bootstrap.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.17/jquery-ui.min.js')
     script(src='/lib/markdown/showdown.js')
     script(src='/lib/ace/ace.js')
     script(src='/lib/ace/mode-markdown.js')
     script(src='/channel/bcsocket.js')
     script(src='/share/share.uncompressed.js')
-    //script(src='/share/textarea.js')
     script(src='/share/ace.js')
     script(src='/lib/prettify.js')
-    //script(src='/share/json.js')
     script.
       $(function() {
+      prettyPrint();
       var converter = new Showdown.converter();
       var view = document.getElementById('view');
       var editor = ace.edit("editor");
@@ -103,4 +107,4 @@ head
       register('disconnected', 'important', 'Offline');
       register('stopped', 'important', 'Error');
       
-      })();
+      })();  
