--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,9 @@ html(ng-app="myApp")
     meta(charset='utf8')
     base(href='/')
     title mywebclass Content Editor
-    link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
-    link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='lib/bootstrap.min.css')
+    link(rel='stylesheet', href='lib/prettify.css')
+    link(rel='stylesheet', href='css/app.css')
   body
     block body
