pulling data from site model into editor

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,7 +36,7 @@ block body
             .span7.offset1
               h3 Edit Your Content
               .editContainer
-                #editor(ng-controller='EditCtrl')
+                #editor
             .span7.offset1
               h3 Markdown Preview
               #view
